<resources>
    <string name="app_name">ExperimentOne</string>
    <string name="title">中山大学课外体育积分电子认证系统</string>
    <string name="username">用户名：</string>
    <string name="input_username">请输入用户名</string>
    <string name="password">密码：</string>
    <string name="input_password">请输入密码</string>
    <string name="student">学生</string>
    <string name="teacher">教师</string>
    <string name="club">社团</string>
    <string name="manager">管理者</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
</resources>
