<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        style="@style/title"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_gravity="center"
        style="@style/sysu_img"/>

    <TableLayout
        style="@style/table_layout_style">

        <TableRow>
            <TextView
                android:id="@+id/textView1"
                style="@style/table_textview_style" />

            <EditText
                style="@style/table_editview_style"
                android:id="@+id/editText1"
                android:hint="@string/input_username"
                android:inputType="text"/>
        </TableRow>

        <TableRow android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/textView2"
                style="@style/table_textview_style1" />

            <EditText
                style="@style/table_editview_style"
                android:id="@+id/editText2"
                android:hint="@string/input_password"
                android:inputType="textPassword"/>
        </TableRow>

    </TableLayout>

    <RadioGroup
        android:id="@+id/id0"
        style="@style/my_radiogroup_style">

        <RadioButton
            style="@style/my_radiobutton_style"
            android:id="@+id/id1"
            android:checked="true"
            android:text="@string/student"/>

        <RadioButton
            style="@style/my_radiobutton_style"
            android:id="@+id/id2"
            android:text="@string/teacher" />

        <RadioButton
            style="@style/my_radiobutton_style"
            android:id="@+id/id3"
            android:text="@string/club" />

        <RadioButton
            style="@style/my_radiobutton_style"
            android:id="@+id/id4"
            android:text="@string/manager" />

    </RadioGroup>

    <LinearLayout style="@style/bottom_style">
        <Button
            android:text="@string/login"
            android:layout_marginRight="15dp"
            android:id="@+id/button1"
            style="@style/bottom_button"/>

        <Button
            android:id="@+id/button2"
            android:text="@string/register"
            style="@style/bottom_button"/>
    </LinearLayout>

</LinearLayout>
